# crm

./: MANIFEST.in  _redirects  about.html  become-an-investor.html  calculator.html  contact.html  cookie-policy.html  dubai-residential-market-continues-strong-growth.html  faq-investors.html  faq-owners.html  faq-partners.html  faq.html  for-banks.html  for-brokers.html  guarantees.html  hooks.py  how-investing-works.html  how-it-works.html  how-lease-to-own-creates-value-for-everyone.html  investors-angels-announces-first-banking-partnership.html  investors-angels.html  lease-to-own-a-smarter-path-to-homeownership.html  login-banks.html  login-brokers.html  login-homeowners.html  login-investors.html  news-insights.html  our-team.html  owners.html  partners.html  privacy-policy.html  pyproject.toml  robots.txt  setup.py  sitemap.xml  terms-conditions.html  the-future-of-mortgage-lending.html  understanding-asset-backed-credit-linked-notes.html  unlocking-real-estate-investment-through-clns.html  why-dubai-remains-a-global-real-estate-destination.html  (+2 more)
.github/workflows/: deploy-portal.yml
assets/css/: site.css
functions/_lib/: http.js  otp.js
functions/api/: parse-property.js  send-email-code.js  send-sms-code.js  submit-application.js  verify-email-code.js  verify-sms-code.js
gazer_custom/: hooks.py  modules.txt
netlify/functions/: package.json  parse-property.js  send-email-code.js  send-sms-code.js  verify-email-code.js  (+2 more)
portal/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  wrangler.toml
(+43 files in other folders)
