[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gazer_custom"
authors = [{name = "Gazer"}]
description = "Custom UI enhancements"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["frappe"]

[tool.bench]
type = "app"
